WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32045
Escapes need to work with known @-rules
https://bugs.webkit.org/show_bug.cgi?id=32045
Summary
Escapes need to work with known @-rules
Dave Hyatt
Reported
2009-12-01 17:56:03 PST
Escape sequences aren't working correctly with @-rule names like @namespace or @import.
Attachments
Patch
(5.16 KB, patch)
2009-12-01 17:58 PST
,
Dave Hyatt
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2009-12-01 17:58:48 PST
Created
attachment 44117
[details]
Patch
WebKit Review Bot
Comment 2
2009-12-01 18:02:45 PST
style-queue ran check-webkit-style on
attachment 44117
[details]
without any errors.
Sam Weinig
Comment 3
2009-12-01 18:06:01 PST
Comment on
attachment 44117
[details]
Patch
> +void CSSParser::recheckAtKeyword(const UChar* str, int len) > +{ > + String ruleName(str, len);
This String construction should not be necessary. We should instead add a version of equalIgnoringCase() that takes a UChar* and a length instead of a String. This will avoid the allocation.
Dave Hyatt
Comment 4
2009-12-01 20:29:08 PST
Given that this is a really silly edge case that will never ever get hit in the real world, I'm not too concerned about making a single String.
Dave Hyatt
Comment 5
2009-12-02 07:59:39 PST
Fixed in
r51600
.
Alexey Proskuryakov
Comment 6
2010-02-11 23:22:21 PST
***
Bug 21471
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug