https://bugs.webkit.org/show_bug.cgi?id=32045, make sure escape sequences work with all the @-rules we support.  When escape sequences are present, the lexical scanner just returns a generic token name: ATKEYWORD.  We have to process the escape sequences and then recheck against the rules we support with the final processed name.  If we find a match, we mutate the token value to the appropriate rule name token, e.g., NAMESPACE_SYM.

Reviewed by Dan Bernstein.

Added fast/css/namespaces/namespaces-escapes.xml

* css/CSSParser.cpp:
(WebCore::CSSParser::lex):
(WebCore::CSSParser::recheckAtKeyword):
(WebCore::CSSParser::text):
* css/CSSParser.h:



Canonical link: https://commits.webkit.org/43027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51600 268f45cc-cd09-0410-ab3c-d52691b4dbfc