WebCore/css/CSSParser.h
@@ -225,6 +225,8 @@ namespace WebCore {
         int lex();
         
     private:
+        void recheckAtKeyword(const UChar* str, int len);
+    
         void clearProperties();
 
         void setupParser(const char* prefix, const String&, const char* suffix);
